Added templates and methods for sign in
- Template added for sign in
- Router handler function added to handle user sign in
    - user signing in is returned a cookie with username attached to it
- index.ejs template updated depending whether user signed in or not
- User sign out function added
- Special route created for signed in users only

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,16 @@
     <link rel="shortcut icon" href="#">
 </head>
 <body>
-    <h1>Welcome to the app!</h1>
-    <a href="/auth/sign-up">Sign up</a>
+    <% if (user) { %>
+        <h1>Welcome to the app, <%= user.username %>!</h1>
+        <a href="/auth/sign-out">Sign out</a>
+    <% } else { %>
+        <h1>Welcome to the app, guest.</h1>
+        <p>
+            <a href="/auth/sign-up">Sign up</a>
+            <a href="/auth/sign-in">Sign in</a>
+        </p>
+    <% } %>
+    <p><a href='/vip-lounge'>Get into the VIP Users Only Lounge!</a></p>
 </body>
 </html>
